--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <title>
 ANOTACIONES DE MACRO
     </title>
-<link rel="stylesheet" href="estilo.css">
-<link rel="stylesheet" href="Normalize.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="hero">
