--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ ANOTACIONES DE MACRO
     <header class="hero">
         <div class="container">  
             <ul class="nav">
-                <li><a href="page.html">Home</a></li>
+                <li><a href="https://economiaparatodos.github.io/indice/">Home</a></li>
 
-                <li><a href="docs.html">Documentos</a>
+                <li><a href="https://economiaparatodos.github.io/documentos/">Documentos</a>
                     <ul>
                         <li><a href="https://kahoot.it/">Actividades</a></li>
                         <li><a href="https://www.youtube.com/channel/UCJQQVLyM6wtPleV4wFBK06g">Videos</a></li>
@@ -21,7 +21,7 @@ ANOTACIONES DE MACRO
                     </ul>
                 </li>
 
-                <li><a href="contacto.html">Contáctenos</a></li>
+                <li><a href="https://economiaparatodos.github.io/contactenos/">Contáctenos</a></li>
             </ul>
             <section class="hero__container">
                 <div class="hero__texts">
