--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>
-ANOTACIONES DE MACRO
+ANOTACIONES DE MACRO Y MICRO
     </title>
 <link rel="stylesheet" href="style.css">
 </head>
