--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@ ANOTACIONES DE MACRO Y MICRO
 
                 <li><a href="https://economiaparatodos.github.io/documentos/">Documentos</a>
                     <ul>
-                        <li><a href="https://kahoot.it/">Actividades</a></li>
-                        <li><a href="https://www.youtube.com/channel/UCJQQVLyM6wtPleV4wFBK06g">Videos</a></li>
-                        <li><a href="https://www.larepublica.co/">Literatura</a></li>
+                        <li><a href="https://kahoot.it/">Microeconomía</a></li>
+                        <li><a href="https://www.larepublica.co/">Macroeconomía</a></li>
                     </ul>
                 </li>
 
@@ -122,7 +121,7 @@ ANOTACIONES DE MACRO Y MICRO
                 <h3 class="footer__title">Material Adicional</h3>
                 <div class="footer__icons">
                     <span class="footer__container-icons">
-                        <a class="fab fa-google footer__icon" href="https://drive.google.com/drive/folders/1wuSZgMLyhGbczzdwdcOQVtgpEYtEB_y9?usp=sharing" ></a>
+                        <a class="fab fa-google footer__icon" href="https://drive.google.com/drive/folders/1CZCjF3ZcDqjWbirfqxWhxVXZuXFqtY3D?usp=sharing" ></a>
                     </span>
                 </div>
 
