--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ ANOTACIONES DE MACRO Y MICRO
                 <li><a href="https://economiaparatodos.github.io/documentos/">Documentos</a>
                     <ul>
                         <li><a href="https://kahoot.it/">Microeconomía</a></li>
-                        <li><a href="https://economiaparatodos.github.io/Macroeconomia/">Macroe</a></li>
+                        <li><a href="https://economiaparatodos.github.io/Macroeconomia/">Macroeconomía</a></li>
                     </ul>
                 </li>
 
