--- a/index.html
+++ b/index.html
@@ -111,9 +111,8 @@ ANOTACIONES DE MACRO Y MICRO
     <footer class="footer">
         <div class="container footer__grid">
             <nav class="nav nav--footer">
-                <a class="nav__items nav_items--footer" href="https://kahoot.it/">Actividades</a>
-                <a class="nav__items nav_items--footer" href="https://www.youtube.com/channel/UCJQQVLyM6wtPleV4wFBK06g">Videos</a>
-                <a class="nav__items nav_items--footer" href="https://www.larepublica.co/">Literatura</a>
+                <a class="nav__items nav_items--footer" href="https://kahoot.it/">Microeconomía</a>
+                <a class="nav__items nav_items--footer" href="https://economiaparatodos.github.io/Macroeconomia-1-00/">Macroeconomía</a>
                 <a class="nav__items nav_items--footer" href="#">Comentarios</a>
             </nav>
             
