--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@ ANOTACIONES DE MACRO Y MICRO
     <main>
         <section class="welcome container">
             <h2 class="subtitle"> Microeconomía</h2>
-            <img src="Micro.png" class="welcome__picture">
+            <img src="Micro.jpg" class="welcome__picture">
             <p class="welcome__copy"> La microeconomía es importante en la toma de decisiones empresariales, porque permite que gerentes puedan comprender mejor el comportamiento del mercado y analizar cómo respondes los consumidores ante cambios en variables como el precio y la cantidad de bienes ofrecidos. (zonaeconomica.com, 2021)</p>
         </section>
          <section class="welcome container">
             <h2 class="subtitle"> Macroeconomía</h2>
-            <img src="Macro.png" class="welcome__picture">
+            <img src="Macro.jpg" class="welcome__picture">
             <p class="welcome__copy"> La Macroeconomía estudia la economía de un lugar, país o conjunto de países. La particularidad de esta disciplina es el análisis en su totalidad. Estos datos tienen que ver con el empleo, la renta nacional o las inversiones. El objetivo de estas magnitudes globales es comprender el entorno, tomar decisiones y pronosticar resultados. (BBVA, s.f.)</p>
         </section>
     </main>
