--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ ANOTACIONES DE MACRO Y MICRO
             <ul class="nav">
                 <li><a href="https://economiaparatodos.github.io/indice/">Home</a></li>
 
-                <li><a href="https://economiaparatodos.github.io/documentos/">Documentos</a>
+                <li><a href="https://economiaparatodos.github.io/documentos/">Areas de conocimiento</a>
                     <ul>
                         <li><a href="https://economiaparatodos.github.io/Microeconomia/">Microeconomía</a></li>
                         <li><a href="https://economiaparatodos.github.io/Macroeconomia-1-00/">Macroeconomía</a></li>
