--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ ANOTACIONES DE MACRO Y MICRO
             </ul>
             <section class="hero__container">
                 <div class="hero__texts">
-                    <h1 class="hero__tittle">Documentos</h1>
-                    <h2 class="hero__subtitle">En esta sección tendrás acceso a todo el material necesario para la compresión y practica de los temas, adicionalmente, compartimos bibliografía de apoyo. </h2>
+                    <h1 class="hero__tittle">Areas de Conocimiento</h1>
+                    <h2 class="hero__subtitle">Estas son las areas de conocimiento sobre las que podrás encontrar información en esta página. </h2>
 
                 </div>
 
